Implementado modal detalhes com habilidades, peso e xp

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
         </div>
        
     </section>
+    <!-- The Modal -->
+    <div id="modal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content" id="modal-content">
+      
+    </div>
+    </div>
+  
+  </div>
 </div>
 <script src="./assets/_js/pokemon-model.js"></script>
 <script src="./assets/_js/poke-api.js"></script>
